# darwinian_evolver

./: .dockerignore  .gitignore  CLAUDE.md  PLAN.md  offload.toml  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: lint.yml  test-offload.yml  test.yml  vet.yml
darwinian_evolver/: __main__.py  apply.py  dashboard.py  git_based_problem.py  problem.py  status.py
darwinian_evolver/imbue_experiments/: run_arc.py
darwinian_evolver/problems/: arc_agi.py  arc_agi_poetiq.py  registry.py  repo_task.py  repo_task_agent.py  repo_task_factory.py  repo_task_test.py  spec_task.py  spec_task_agent.py  spec_task_factory.py
scripts/: offload-tests.sh
