[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darwinian-evolver"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "anthropic==0.77.0",
    "numpy==2.4.2",
    "google-genai==1.56.0",
    "openai==2.16.0",
    "pydantic==2.12.5",
    "jinja2==3.1.6",
    "func_timeout==4.3.5",
    "fsspec==2026.1.0",
]
requires-python = ">=3.11"

[tool.setuptools]
packages.find.include = ["darwinian_evolver*"]
package-data.darwinian_evolver = ["py.typed"]

[dependency-groups]
dev = [
    "tqdm",
    "pandas",
    "pandas-stubs",
]
test = [
    "pytest",
]
